tests/lit/tcheck/immutable_02.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2026 Intel Corporation

function F(implicit N : {0..}, x : Bits(N))
begin
    N := 1;
// CHECK: Type error: assignment to immutable variable `N` declared at
end
